--- a/signup.html
+++ b/signup.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pulse - Daily Progress Tracker</title>
+  <meta name="description" content="Create your Pulse account and start tracking your habits and progress today.">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/styles.css" />
   <script src="https://unpkg.com/lucide@latest"></script>
-  <style>
-    html, body { height: 100%; }
-    body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, 'Apple Color Emoji', 'Segoe UI Emoji'; }
-  </style>
+  <script src="assets/theme.js"></script>
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-
+  <meta name="theme-color" content="#FAFBFC">
 </head>
-<body class="min-h-full bg-gradient-to-br from-gray-50 to-gray-100 text-gray-900">
-  <main class="min-h-full flex items-center justify-center py-12 px-4">
-    <div class="w-full max-w-md">
-      <div class="text-center mb-6">
-        <div class="w-16 h-16 rounded-2xl bg-gradient-to-r from-blue-600 to-indigo-600 flex items-center justify-center mx-auto mb-4">
-          <i data-lucide="trending-up" class="w-8 h-8 text-white"></i>
+<body>
+  <div class="auth-theme-toggle-container">
+    <div class="theme-toggle-container"></div>
+  </div>
+  
+  <div id="auth-section">
+    <div class="auth-container">
+      <div class="auth-header">
+        <div class="w-20 h-20 rounded-3xl bg-gradient-to-r from-blue-600 to-indigo-600 flex items-center justify-center mx-auto mb-6 shadow-lg">
+          <i data-lucide="trending-up" class="w-10 h-10 text-white"></i>
         </div>
-        <h1 class="text-2xl font-semibold">Create your account</h1>
-        <p class="text-gray-600 mt-1">Start your progress journey today</p>
+        <h1>Create your account</h1>
+        <p>Start your progress journey today</p>
       </div>
 
-      <div class="card p-6 sm:p-8">
-        <div id="message-box-auth" class="message-box" role="alert" aria-live="polite" style="display:none"></div>
+      <div id="message-box-auth" class="message-box" role="alert" aria-live="polite" style="display:none"></div>
 
-        <form id="register-form" class="space-y-5">
+      <form id="register-form" class="space-y-6">
           <div>
-            <label for="register-username" class="block text-sm font-medium text-gray-700 mb-2">Username</label>
-            <input id="register-username" type="text" autocomplete="username" required placeholder="Choose a username" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-blue-600 focus:ring-2 focus:ring-blue-600/20" />
+            <label for="register-username">Username</label>
+            <input id="register-username" type="text" autocomplete="username" required placeholder="Choose a username" />
           </div>
           <div>
-            <label for="register-email" class="block text-sm font-medium text-gray-700 mb-2">Email address</label>
-            <input id="register-email" type="email" autocomplete="email" required placeholder="you@example.com" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-blue-600 focus:ring-2 focus:ring-blue-600/20" />
+            <label for="register-email">Email address</label>
+            <input id="register-email" type="email" autocomplete="email" required placeholder="you@example.com" />
           </div>
           <div>
-            <label for="register-password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-            <input id="register-password" type="password" autocomplete="new-password" required placeholder="Create a strong password" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-blue-600 focus:ring-2 focus:ring-blue-600/20" />
+            <label for="register-password">Password</label>
+            <input id="register-password" type="password" autocomplete="new-password" required placeholder="Create a strong password" />
           </div>
 
           <button id="register-submit" type="submit" class="btn btn-primary w-full">
-            <i data-lucide="user-plus" class="w-5 h-5 mr-2"></i>
+            <i data-lucide="user-plus" class="w-5 h-5 mr-3"></i>
             Create Account
           </button>
         </form>
 
-        <div class="mt-6 text-center text-sm text-gray-600">
-          Already have an account?
-          <a href="login.html" class="text-blue-700 hover:text-blue-800 font-medium">Sign in</a>
+        <div class="auth-disclaimer">
+          <p>By creating an account you agree to our terms and privacy policy.</p>
+        </div>
+
+        <div class="auth-footer">
+          <p>
+            Already have an account?
+            <a href="login.html">Sign in</a>
+          </p>
         </div>
       </div>
-
-      <p class="text-center text-xs text-gray-500 mt-6">By creating an account you agree to our terms and privacy policy.</p>
     </div>
-  </main>
+  </div>
 
   <script>lucide.createIcons()</script>
   <script type="module" src="assets/auth.js"></script>
