--- a/pin.html
+++ b/pin.html
@@ -18,7 +18,7 @@
     </div>
 
     <div id="auth-section">
-        <div id="pin-section" class="auth-container" style="max-width: 520px;">
+        <div id="pin-section" class="auth-container loading" style="max-width: 520px;">
             <div class="auth-header">
                 <div class="w-20 h-20 rounded-3xl bg-gradient-to-r from-blue-600 to-indigo-600 flex items-center justify-center mx-auto mb-6 shadow-lg">
                     <i id="pin-header-icon" data-lucide="shield-check" class="w-10 h-10 text-white"></i>
